src/gr/uoi/cs/dmod/hecate/parser/DDLParser.java
// $ANTLR 3.4 DDL.g 2013-01-13 14:52:59

  package gr.uoi.cs.dmod.hecate.parser ;
  import gr.uoi.cs.dmod.hecate.sql.* ;
  import java.util.TreeMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class DDLParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACTION", "ASC", "AUTO_INC", "BINARY", "CASCADE", "CHARACTER", "COMMENT", "CREATE", "DEF", "DEFAULT", "DELETE", "DESC", "DROP", "ENUM", "ESC_SEQ", "EXISTS", "FOREIGN", "FULLTEXT", "HASH", "HEX_DIGIT", "ID", "IF", "INDEX", "INT", "KEY", "NO", "NOT", "NULL", "OCTAL_ESC", "ON", "PRIMARY", "REFERENCES", "RESTRICT", "SCHEMA", "SET", "TABLE", "UNICODE_ESC", "UNIQUE", "UNSIGNED", "UPDATE", "USE", "WS", "'('", "')'", "','", "'.'", "';'", "'='", "'\\'\\''"
    };

    public static final int EOF=-1;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int ACTION=4;
    public static final int ASC=5;
    public static final int AUTO_INC=6;
    public static final int BINARY=7;
    public static final int CASCADE=8;
    public static final int CHARACTER=9;
    public static final int COMMENT=10;
    public static final int CREATE=11;
    public static final int DEF=12;
    public static final int DEFAULT=13;
    public static final int DELETE=14;
    public static final int DESC=15;
    public static final int DROP=16;
    public static final int ENUM=17;
    public static final int ESC_SEQ=18;
    public static final int EXISTS=19;
    public static final int FOREIGN=20;
    public static final int FULLTEXT=21;
    public static final int HASH=22;
    public static final int HEX_DIGIT=23;
    public static final int ID=24;
    public static final int IF=25;
    public static final int INDEX=26;
    public static final int INT=27;
    public static final int KEY=28;
    public static final int NO=29;
    public static final int NOT=30;
    public static final int NULL=31;
    public static final int OCTAL_ESC=32;
    public static final int ON=33;
    public static final int PRIMARY=34;
    public static final int REFERENCES=35;
    public static final int RESTRICT=36;
    public static final int SCHEMA=37;
    public static final int SET=38;
    public static final int TABLE=39;
    public static final int UNICODE_ESC=40;
    public static final int UNIQUE=41;
    public static final int UNSIGNED=42;
    public static final int UPDATE=43;
    public static final int USE=44;
    public static final int WS=45;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public DDLParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public DDLParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return DDLParser.tokenNames; }
    public String getGrammarFileName() { return "DDL.g"; }


    	Schema s ;
    	TreeMap<String, Table> tm = new TreeMap<String, Table>();
    	TreeMap<String, Attribute> km = new TreeMap<String, Attribute>();
    	TreeMap<String, Attribute> am = new TreeMap<String, Attribute>();
    	Key k = null;
    	
    	String[] getArrayFromList(String list) {
    		String[] array = list.split(",");
    		for (int i = 0; i < array.length; i++) {
    			array[i] = array[i].trim();
    		}
    		return array;
    	}



    // $ANTLR start "start"
    // DDL.g:33:1: start returns [Schema s] : ( drop | create | namespace )+ ;
    public final Schema start() throws RecognitionException {
        Schema s = null;


        try {
            // DDL.g:34:2: ( ( drop | create | namespace )+ )
            // DDL.g:34:4: ( drop | create | namespace )+
            {
            // DDL.g:34:4: ( drop | create | namespace )+
            int cnt1=0;
            loop1:
            do {
                int alt1=4;
                switch ( input.LA(1) ) {
                case DROP:
                    {
                    alt1=1;
                    }
                    break;
                case CREATE:
                    {
                    alt1=2;
                    }
                    break;
                case USE:
                    {
                    alt1=3;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // DDL.g:34:6: drop
            	    {
            	    pushFollow(FOLLOW_drop_in_start51);
            	    drop();

            	    state._fsp--;


            	    }
            	    break;
            	case 2 :
            	    // DDL.g:34:13: create
            	    {
            	    pushFollow(FOLLOW_create_in_start55);
            	    create();

            	    state._fsp--;


            	    }
            	    break;
            	case 3 :
            	    // DDL.g:34:22: namespace
            	    {
            	    pushFollow(FOLLOW_namespace_in_start59);
            	    namespace();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);



            		s = new Schema(tm) ;
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return s;
    }
    // $ANTLR end "start"



    // $ANTLR start "namespace"
    // DDL.g:40:1: namespace : USE name ';' ;
    public final void namespace() throws RecognitionException {
        try {
            // DDL.g:41:2: ( USE name ';' )
            // DDL.g:41:4: USE name ';'
            {
            match(input,USE,FOLLOW_USE_in_namespace77); 

            pushFollow(FOLLOW_name_in_namespace79);
            name();

            state._fsp--;


            match(input,50,FOLLOW_50_in_namespace81); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "namespace"



    // $ANTLR start "drop"
    // DDL.g:44:1: drop : DROP TABLE ( IF EXISTS )? nameList ';' ;
    public final void drop() throws RecognitionException {
        try {
            // DDL.g:45:2: ( DROP TABLE ( IF EXISTS )? nameList ';' )
            // DDL.g:45:4: DROP TABLE ( IF EXISTS )? nameList ';'
            {
            match(input,DROP,FOLLOW_DROP_in_drop92); 

            match(input,TABLE,FOLLOW_TABLE_in_drop94); 

            // DDL.g:45:15: ( IF EXISTS )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==IF) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // DDL.g:45:17: IF EXISTS
                    {
                    match(input,IF,FOLLOW_IF_in_drop98); 

                    match(input,EXISTS,FOLLOW_EXISTS_in_drop100); 

                    }
                    break;

            }


            pushFollow(FOLLOW_nameList_in_drop105);
            nameList();

            state._fsp--;


            match(input,50,FOLLOW_50_in_drop107); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "drop"



    // $ANTLR start "create"
    // DDL.g:48:1: create : ( CREATE schema ';' | CREATE table ';' | CREATE index ';' );
    public final void create() throws RecognitionException {
        try {
            // DDL.g:49:2: ( CREATE schema ';' | CREATE table ';' | CREATE index ';' )
            int alt3=3;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==CREATE) ) {
                switch ( input.LA(2) ) {
                case SCHEMA:
                    {
                    alt3=1;
                    }
                    break;
                case TABLE:
                    {
                    alt3=2;
                    }
                    break;
                case FULLTEXT:
                case INDEX:
                case PRIMARY:
                case UNIQUE:
                    {
                    alt3=3;
                    }
                    break;
                default:
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }

            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // DDL.g:49:4: CREATE schema ';'
                    {
                    match(input,CREATE,FOLLOW_CREATE_in_create119); 

                    pushFollow(FOLLOW_schema_in_create121);
                    schema();

                    state._fsp--;


                    match(input,50,FOLLOW_50_in_create123); 

                    }
                    break;
                case 2 :
                    // DDL.g:50:4: CREATE table ';'
                    {
                    match(input,CREATE,FOLLOW_CREATE_in_create128); 

                    pushFollow(FOLLOW_table_in_create130);
                    table();

                    state._fsp--;


                    match(input,50,FOLLOW_50_in_create132); 

                    }
                    break;
                case 3 :
                    // DDL.g:51:4: CREATE index ';'
                    {
                    match(input,CREATE,FOLLOW_CREATE_in_create137); 

                    pushFollow(FOLLOW_index_in_create139);
                    index();

                    state._fsp--;


                    match(input,50,FOLLOW_50_in_create141); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "create"



    // $ANTLR start "schema"
    // DDL.g:54:1: schema : SCHEMA ( IF NOT EXISTS )? name ( parameter )? ;
    public final void schema() throws RecognitionException {
        try {
            // DDL.g:55:2: ( SCHEMA ( IF NOT EXISTS )? name ( parameter )? )
            // DDL.g:55:4: SCHEMA ( IF NOT EXISTS )? name ( parameter )?
            {
            match(input,SCHEMA,FOLLOW_SCHEMA_in_schema153); 

            // DDL.g:55:11: ( IF NOT EXISTS )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IF) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // DDL.g:55:13: IF NOT EXISTS
                    {
                    match(input,IF,FOLLOW_IF_in_schema157); 

                    match(input,NOT,FOLLOW_NOT_in_schema159); 

                    match(input,EXISTS,FOLLOW_EXISTS_in_schema161); 

                    }
                    break;

            }


            pushFollow(FOLLOW_name_in_schema166);
            name();

            state._fsp--;


            // DDL.g:55:35: ( parameter )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0 >= DEF && LA5_0 <= DEFAULT)||LA5_0==ID) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // DDL.g:55:35: parameter
                    {
                    pushFollow(FOLLOW_parameter_in_schema168);
                    parameter();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "schema"



    // $ANTLR start "table"
    // DDL.g:58:1: table : TABLE ( IF NOT EXISTS )? name '(' definition ')' ( parameter )? ;
    public final void table() throws RecognitionException {
        DDLParser.name_return name1 =null;



        		am.clear();
        	
        try {
            // DDL.g:62:2: ( TABLE ( IF NOT EXISTS )? name '(' definition ')' ( parameter )? )
            // DDL.g:62:4: TABLE ( IF NOT EXISTS )? name '(' definition ')' ( parameter )?
            {
            match(input,TABLE,FOLLOW_TABLE_in_table186); 

            // DDL.g:62:10: ( IF NOT EXISTS )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==IF) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // DDL.g:62:12: IF NOT EXISTS
                    {
                    match(input,IF,FOLLOW_IF_in_table190); 

                    match(input,NOT,FOLLOW_NOT_in_table192); 

                    match(input,EXISTS,FOLLOW_EXISTS_in_table194); 

                    }
                    break;

            }


            pushFollow(FOLLOW_name_in_table199);
            name1=name();

            state._fsp--;


            match(input,46,FOLLOW_46_in_table201); 

            pushFollow(FOLLOW_definition_in_table203);
            definition();

            state._fsp--;


            match(input,47,FOLLOW_47_in_table205); 

            // DDL.g:62:53: ( parameter )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0 >= DEF && LA7_0 <= DEFAULT)||LA7_0==ID) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // DDL.g:62:53: parameter
                    {
                    pushFollow(FOLLOW_parameter_in_table207);
                    parameter();

                    state._fsp--;


                    }
                    break;

            }



            		tm.put((name1!=null?input.toString(name1.start,name1.stop):null).replace("`",""), new Table((name1!=null?input.toString(name1.start,name1.stop):null).replace("`",""), am, k)) ;
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "table"



    // $ANTLR start "definition"
    // DDL.g:68:1: definition : ( column | constraint | index ) ( ',' ( column | constraint | index ) )* ;
    public final void definition() throws RecognitionException {
        try {
            // DDL.g:69:2: ( ( column | constraint | index ) ( ',' ( column | constraint | index ) )* )
            // DDL.g:69:4: ( column | constraint | index ) ( ',' ( column | constraint | index ) )*
            {
            // DDL.g:69:4: ( column | constraint | index )
            int alt8=3;
            switch ( input.LA(1) ) {
            case DEF:
            case ID:
                {
                alt8=1;
                }
                break;
            case UNIQUE:
                {
                int LA8_2 = input.LA(2);

                if ( (LA8_2==DEF||LA8_2==ID||LA8_2==KEY||(LA8_2 >= 46 && LA8_2 <= 48)) ) {
                    alt8=2;
                }
                else if ( (LA8_2==INDEX) ) {
                    alt8=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 2, input);

                    throw nvae;

                }
                }
                break;
            case FOREIGN:
            case KEY:
                {
                alt8=2;
                }
                break;
            case PRIMARY:
                {
                int LA8_4 = input.LA(2);

                if ( (LA8_4==KEY) ) {
                    alt8=2;
                }
                else if ( (LA8_4==INDEX) ) {
                    alt8=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 4, input);

                    throw nvae;

                }
                }
                break;
            case FULLTEXT:
            case INDEX:
                {
                alt8=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;

            }

            switch (alt8) {
                case 1 :
                    // DDL.g:69:6: column
                    {
                    pushFollow(FOLLOW_column_in_definition225);
                    column();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // DDL.g:69:15: constraint
                    {
                    pushFollow(FOLLOW_constraint_in_definition229);
                    constraint();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // DDL.g:69:28: index
                    {
                    pushFollow(FOLLOW_index_in_definition233);
                    index();

                    state._fsp--;


                    }
                    break;

            }


            // DDL.g:69:36: ( ',' ( column | constraint | index ) )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==48) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // DDL.g:69:38: ',' ( column | constraint | index )
            	    {
            	    match(input,48,FOLLOW_48_in_definition239); 

            	    // DDL.g:69:42: ( column | constraint | index )
            	    int alt9=3;
            	    switch ( input.LA(1) ) {
            	    case DEF:
            	    case ID:
            	        {
            	        alt9=1;
            	        }
            	        break;
            	    case UNIQUE:
            	        {
            	        int LA9_2 = input.LA(2);

            	        if ( (LA9_2==DEF||LA9_2==ID||LA9_2==KEY||(LA9_2 >= 46 && LA9_2 <= 48)) ) {
            	            alt9=2;
            	        }
            	        else if ( (LA9_2==INDEX) ) {
            	            alt9=3;
            	        }
            	        else {
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 9, 2, input);

            	            throw nvae;

            	        }
            	        }
            	        break;
            	    case FOREIGN:
            	    case KEY:
            	        {
            	        alt9=2;
            	        }
            	        break;
            	    case PRIMARY:
            	        {
            	        int LA9_4 = input.LA(2);

            	        if ( (LA9_4==KEY) ) {
            	            alt9=2;
            	        }
            	        else if ( (LA9_4==INDEX) ) {
            	            alt9=3;
            	        }
            	        else {
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 9, 4, input);

            	            throw nvae;

            	        }
            	        }
            	        break;
            	    case FULLTEXT:
            	    case INDEX:
            	        {
            	        alt9=3;
            	        }
            	        break;
            	    default:
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 9, 0, input);

            	        throw nvae;

            	    }

            	    switch (alt9) {
            	        case 1 :
            	            // DDL.g:69:44: column
            	            {
            	            pushFollow(FOLLOW_column_in_definition243);
            	            column();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // DDL.g:69:53: constraint
            	            {
            	            pushFollow(FOLLOW_constraint_in_definition247);
            	            constraint();

            	            state._fsp--;


            	            }
            	            break;
            	        case 3 :
            	            // DDL.g:69:66: index
            	            {
            	            pushFollow(FOLLOW_index_in_definition251);
            	            index();

            	            state._fsp--;


            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "definition"



    // $ANTLR start "column"
    // DDL.g:72:1: column : name type ( option )* ;
    public final void column() throws RecognitionException {
        DDLParser.type_return type2 =null;

        DDLParser.name_return name3 =null;


        try {
            // DDL.g:73:2: ( name type ( option )* )
            // DDL.g:73:4: name type ( option )*
            {
            pushFollow(FOLLOW_name_in_column268);
            name3=name();

            state._fsp--;


            pushFollow(FOLLOW_type_in_column270);
            type2=type();

            state._fsp--;


            // DDL.g:73:14: ( option )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==AUTO_INC||LA11_0==DEFAULT||LA11_0==FOREIGN||LA11_0==KEY||(LA11_0 >= NOT && LA11_0 <= NULL)||(LA11_0 >= PRIMARY && LA11_0 <= REFERENCES)||LA11_0==UNIQUE) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // DDL.g:73:14: option
            	    {
            	    pushFollow(FOLLOW_option_in_column272);
            	    option();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);



            		String t = (type2!=null?input.toString(type2.start,type2.stop):null);
            		am.put((name3!=null?input.toString(name3.start,name3.stop):null).replace("`",""), new Attribute((name3!=null?input.toString(name3.start,name3.stop):null).replace("`",""), t.toUpperCase(), false, null)) ;
            	

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "column"



    // $ANTLR start "constraint"
    // DDL.g:80:1: constraint : ( key | UNIQUE ( name )? ( '(' nameList ')' )? );
    public final void constraint() throws RecognitionException {
        try {
            // DDL.g:81:2: ( key | UNIQUE ( name )? ( '(' nameList ')' )? )
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==UNIQUE) ) {
                int LA14_1 = input.LA(2);

                if ( (LA14_1==KEY) ) {
                    alt14=1;
                }
                else if ( (LA14_1==DEF||LA14_1==ID||(LA14_1 >= 46 && LA14_1 <= 48)) ) {
                    alt14=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 14, 1, input);

                    throw nvae;

                }
            }
            else if ( (LA14_0==FOREIGN||LA14_0==KEY||LA14_0==PRIMARY) ) {
                alt14=1;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 14, 0, input);

                throw nvae;

            }
            switch (alt14) {
                case 1 :
                    // DDL.g:81:4: key
                    {
                    pushFollow(FOLLOW_key_in_constraint288);
                    key();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // DDL.g:82:4: UNIQUE ( name )? ( '(' nameList ')' )?
                    {
                    match(input,UNIQUE,FOLLOW_UNIQUE_in_constraint293); 

                    // DDL.g:82:11: ( name )?
                    int alt12=2;
                    int LA12_0 = input.LA(1);

                    if ( (LA12_0==DEF||LA12_0==ID) ) {
                        alt12=1;
                    }
                    switch (alt12) {
                        case 1 :
                            // DDL.g:82:11: name
                            {
                            pushFollow(FOLLOW_name_in_constraint295);
                            name();

                            state._fsp--;


                            }
                            break;

                    }


                    // DDL.g:82:17: ( '(' nameList ')' )?
                    int alt13=2;
                    int LA13_0 = input.LA(1);

                    if ( (LA13_0==46) ) {
                        alt13=1;
                    }
                    switch (alt13) {
                        case 1 :
                            // DDL.g:82:19: '(' nameList ')'
                            {
                            match(input,46,FOLLOW_46_in_constraint300); 

                            pushFollow(FOLLOW_nameList_in_constraint302);
                            nameList();

                            state._fsp--;


                            match(input,47,FOLLOW_47_in_constraint304); 

                            }
                            break;

                    }


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "constraint"



    // $ANTLR start "index"
    // DDL.g:85:1: index : ( ( UNIQUE | PRIMARY )? INDEX ( name )? ( ON name )? '(' nameList ')' | FULLTEXT name '(' nameList ')' );
    public final void index() throws RecognitionException {
        try {
            // DDL.g:86:2: ( ( UNIQUE | PRIMARY )? INDEX ( name )? ( ON name )? '(' nameList ')' | FULLTEXT name '(' nameList ')' )
            int alt18=2;
            int LA18_0 = input.LA(1);

            if ( (LA18_0==INDEX||LA18_0==PRIMARY||LA18_0==UNIQUE) ) {
                alt18=1;
            }
            else if ( (LA18_0==FULLTEXT) ) {
                alt18=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 18, 0, input);

                throw nvae;

            }
            switch (alt18) {
                case 1 :
                    // DDL.g:86:4: ( UNIQUE | PRIMARY )? INDEX ( name )? ( ON name )? '(' nameList ')'
                    {
                    // DDL.g:86:4: ( UNIQUE | PRIMARY )?
                    int alt15=2;
                    int LA15_0 = input.LA(1);

                    if ( (LA15_0==PRIMARY||LA15_0==UNIQUE) ) {
                        alt15=1;
                    }
                    switch (alt15) {
                        case 1 :
                            // DDL.g:
                            {
                            if ( input.LA(1)==PRIMARY||input.LA(1)==UNIQUE ) {
                                input.consume();
                                state.errorRecovery=false;
                            }
                            else {
                                MismatchedSetException mse = new MismatchedSetException(null,input);
                                throw mse;
                            }


                            }
                            break;

                    }


                    match(input,INDEX,FOLLOW_INDEX_in_index330); 

                    // DDL.g:86:32: ( name )?
                    int alt16=2;
                    int LA16_0 = input.LA(1);

                    if ( (LA16_0==DEF||LA16_0==ID) ) {
                        alt16=1;
                    }
                    switch (alt16) {
                        case 1 :
                            // DDL.g:86:32: name
                            {
                            pushFollow(FOLLOW_name_in_index332);
                            name();

                            state._fsp--;


                            }
                            break;

                    }


                    // DDL.g:86:38: ( ON name )?
                    int alt17=2;
                    int LA17_0 = input.LA(1);

                    if ( (LA17_0==ON) ) {
                        alt17=1;
                    }
                    switch (alt17) {
                        case 1 :
                            // DDL.g:86:40: ON name
                            {
                            match(input,ON,FOLLOW_ON_in_index337); 

                            pushFollow(FOLLOW_name_in_index339);
                            name();

                            state._fsp--;


                            }
                            break;

                    }


                    match(input,46,FOLLOW_46_in_index344); 

                    pushFollow(FOLLOW_nameList_in_index346);
                    nameList();

                    state._fsp--;


                    match(input,47,FOLLOW_47_in_index348); 

                    }
                    break;
                case 2 :
                    // DDL.g:87:4: FULLTEXT name '(' nameList ')'
                    {
                    match(input,FULLTEXT,FOLLOW_FULLTEXT_in_index353); 

                    pushFollow(FOLLOW_name_in_index355);
                    name();

                    state._fsp--;


                    match(input,46,FOLLOW_46_in_index357); 

                    pushFollow(FOLLOW_nameList_in_index359);
                    nameList();

                    state._fsp--;


                    match(input,47,FOLLOW_47_in_index361); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "index"



    // $ANTLR start "key"
    // DDL.g:90:1: key : ( ( UNIQUE | PRIMARY )? KEY ( name )? ( '(' nameList ')' )? | FOREIGN KEY ( name )? ( '(' nameList ')' )? reference );
    public final void key() throws RecognitionException {
        DDLParser.nameList_return nameList4 =null;



        		km.clear();
        	
        try {
            // DDL.g:94:2: ( ( UNIQUE | PRIMARY )? KEY ( name )? ( '(' nameList ')' )? | FOREIGN KEY ( name )? ( '(' nameList ')' )? reference )
            int alt24=2;
            int LA24_0 = input.LA(1);

            if ( (LA24_0==KEY||LA24_0==PRIMARY||LA24_0==UNIQUE) ) {
                alt24=1;
            }
            else if ( (LA24_0==FOREIGN) ) {
                alt24=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 24, 0, input);

                throw nvae;

            }
            switch (alt24) {
                case 1 :
                    // DDL.g:94:4: ( UNIQUE | PRIMARY )? KEY ( name )? ( '(' nameList ')' )?
                    {
                    // DDL.g:94:4: ( UNIQUE | PRIMARY )?
                    int alt19=2;
                    int LA19_0 = input.LA(1);
